--- a/index.html
+++ b/index.html
@@ -108,15 +108,16 @@
                 tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
               <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow">MENU</a>
             </div>
-          </div>
           <div class="col m-3 bg-dark bg-gradient text-center">
+            <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-3 shadow" alt="cafedibujo">
             <div class="card-body">
-              <h5 class="card-title"></h5>
-              <a href="./pages/contacto.html" class="btn btn-primary btn-lg btn-warning shadow">CONTACTO</a>
+              <h5 class="card-title destacado text-light">DISFRUTA DEL CAFÉ DEL MUNDO</h5>
+              <p class="card-text text-light">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte.
+                Y llevate
+                a
+                tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
+              <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow">MENU</a>
             </div>
-            <img src="imagenes/quienes 4.jpg" class="card-img-bottom rounded mb-3 shadow" alt="...">
-          </div>
-        </div>
       </div>
     </section>
     <article>
