--- a/pages/menu.html
+++ b/pages/menu.html
@@ -118,7 +118,7 @@
               <p>Direccion</p>
             </label>
           </div>
-          <button class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="buttonDeleteCart">BORRAR TODO</a>
+          <button class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="buttonDeleteCart">REALIZAR TU COMPRA</a>
           </button>
       </form>
     </section>
