--- a/pages/menu.html
+++ b/pages/menu.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="col d-flex justify-content-end">
             <a class="navbar-brand" href="../index.html">
-              <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130" class="rounded-circle shadow ">
+              <img src="../imagenes/logo.png" alt="imagenlogo" width="130" height="130" class="rounded-circle shadow" id="logo">
             </a>
           </div>
           <div class="col">
@@ -63,7 +63,8 @@
   <main>
     <section>
       <div class="container-xl text-center">
-        <div class="row m-1" id="cont">
+
+        <div class="m-1 row" id="cont">
         </div>
       </div>
     </section>
