--- a/pages/menu.html
+++ b/pages/menu.html
@@ -67,9 +67,11 @@
         </div>
       </div>
     </section>
-    <section class="container text-center bg-dark text-light rounded mb-3">
+    <section class="container-xl text-center bg-dark text-light rounded mb-3">
       <h1 class="stronge text-center">DETALLE COMPRA:</h1>
-      <div class="row m-1" id="detalleDeCompra">
+      <div class="row m-1">
+      <div class="col-sm-3" id="detalleDeCompra"> 
+      </div>
       </div>
       <h2 class="row container" id="total">
       </h2>
