--- a/pages/menu.html
+++ b/pages/menu.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Open+Sans:wght@300&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <meta name="description" content="conoce el mejor cafe del mundo">
   <meta name="keywords" content="cafe, comprar cafe, el mejor cafe del mundo, cafe argentina, venta de cafe">
 </head>
@@ -70,8 +70,8 @@
     <section class="container-xl text-center bg-dark text-light rounded mb-3">
       <h1 class="stronge text-center">DETALLE COMPRA:</h1>
       <div class="row m-1">
-      <div class="col-sm-3" id="detalleDeCompra"> 
-      </div>
+        <div class="col-sm-3" id="detalleDeCompra">
+        </div>
       </div>
       <h2 class="row container" id="total">
       </h2>
@@ -120,7 +120,8 @@
               <p>Direccion</p>
             </label>
           </div>
-          <button class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="buttonDeleteCart">REALIZAR TU COMPRA</a>
+          <button class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="buttonDeleteCart">REALIZAR TU
+            COMPRA</a>
           </button>
       </form>
     </section>
