--- a/pages/menu.html
+++ b/pages/menu.html
@@ -70,7 +70,7 @@
     <section class="container-xl text-center bg-dark text-light rounded mb-3">
       <h1 class="stronge text-center">DETALLE COMPRA:</h1>
       <div class="row m-1">
-        <div class="col-sm-3" id="detalleDeCompra">
+        <div class="col-sm-3 p-2" id="detalleDeCompra">
         </div>
       </div>
       <h2 class="row container" id="total">
