--- a/index.html
+++ b/index.html
@@ -108,17 +108,18 @@
                 tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
               <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow">MENU</a>
             </div>
-          <div class="col m-3 bg-dark bg-gradient text-center">
-            <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-3 shadow" alt="cafedibujo">
-            <div class="card-body">
-              <h5 class="card-title destacado text-light">DISFRUTA DEL CAFÉ DEL MUNDO</h5>
-              <p class="card-text text-light">Veni a conocernos, disfrutá de la experiencia que tenemos para brindarte.
-                Y llevate
-                a
-                tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
-              <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow">MENU</a>
+            <div class="col m-3 bg-dark bg-gradient text-center">
+              <img src="imagenes/fotomenu.jpg" class="card-img-top rounded mt-3 shadow" alt="cafedibujo">
+              <div class="card-body">
+                <h5 class="card-title destacado text-light">DISFRUTA DEL CAFÉ DEL MUNDO</h5>
+                <p class="card-text text-light">Veni a conocernos, disfrutá de la experiencia que tenemos para
+                  brindarte.
+                  Y llevate
+                  a
+                  tu casa el mejor café del mundo. Descubrí por qué #SomosCafe</p>
+                <a href="./pages/menu.html" class="btn btn-primary btn-lg btn-warning shadow">MENU</a>
+              </div>
             </div>
-      </div>
     </section>
     <article>
       <div class="containterr shadow">
@@ -145,7 +146,7 @@
     <script src="../js/productos.js"></script>
     <script src="../js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 </body>
 
