--- a/pages/menu.html
+++ b/pages/menu.html
@@ -75,12 +75,14 @@
       </div>
       <h2 class="row container" id="total">
       </h2>
-      <button class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="buttonDeleteCart">BORRAR TODO</a>
-      </button>
+      <button class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="buttonDeleteCart">BORRAR TODO</button>
     </section>
 
     </section>
     <section class="container-xl">
+      <div id="envio"> 
+
+      </div>
       <form action="">
         <div class="card p-1 rounded bg-dark bg-gradient">
           <div class="form-floating mb-3 shadow">
@@ -120,9 +122,7 @@
               <p>Direccion</p>
             </label>
           </div>
-          <button class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="buttonDeleteCart">REALIZAR TU
-            COMPRA</a>
-          </button>
+          <button class="btn btn-primary btn-lg btn-warning shadow destacado m-2" id="compra">REALIZA TU COMPRA</button>
       </form>
     </section>
     <section>
